# maboy

./: .clang-format  .gitignore  CLEANUP_SUMMARY.md  CMakeLists.txt  LICENSE  PRODUCTION_READY.md  README.md  first_run.sh  frozen_east_text_detection.pb  ocr_cache.pkl  ocr_vectorizer.pkl  requirements.txt  validator.py
docs/: SETUP.md
gui/include/: AnimatedButton.h  ErrorPopup.h  FileDropPanel.h  MainWindow.h
gui/resources/: colors.qss  resources.qrc.depends
gui/resources/icons/: logo.icns
gui/src/: AnimatedButton.cpp  ErrorPopup.cpp  FileDropPanel.cpp  MainWindow.cpp  main.cpp
include/: DocumentValidator.h
scripts/: convert_models.py  doc_orc.py  original_validator.py  test_model_comparison.py
src/: DocumentValidator.cpp
train/: train_ocr_validator2.py  train_realism_model_alt1.py  train_realism_model_alt2.py  train_validator.py
